# forcaster

./: .env  .gitignore  Cargo.toml  response.json
src/: astronaut.rs  lib.rs  main.rs  weather.rs
src/Astronaut/: astronaut.rs  mod.rs
src/Weather/: mod.rs  weather.rs
